2012-08-08  Nate Chapin  <japhet@chromium.org>

        [chromium] Upstream android's FlingAnimator
        https://bugs.webkit.org/show_bug.cgi?id=92900

        Reviewed by James Robinson.

        No new tests yet, will be added once this code is called.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (WebKit::Platform::createFlingAnimator):
        * chromium/public/WebFlingAnimator.h: Added.
        (WebKit):
        (WebFlingAnimator):
        (WebKit::WebFlingAnimator::~WebFlingAnimator):

2012-08-07  James Robinson  <jamesr@chromium.org>

        [chromium] Switch PlatformLayer typedef to Platform API type for PLATFORM(CHROMIUM)
        https://bugs.webkit.org/show_bug.cgi?id=93335

        Reviewed by Adrienne Walker.

        Add APIs to control scrolling behavior on WebScrollableLayer.

        * chromium/public/WebScrollableLayer.h:
        (WebScrollableLayer):

2012-08-07  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebCompositor interface in Platform API instead of CCProxy to query threaded compositor status
        https://bugs.webkit.org/show_bug.cgi?id=93398

        Reviewed by Adam Barth.

        Adds thread status query interfaces to WebCompositor for WebKit code that wants to know if we are in threaded
        mode.

        * chromium/public/WebCompositor.h:
        (WebCompositor):

2012-08-07  James Robinson  <jamesr@chromium.org>

        [chromium] Move WebCompositor interface into Platform API
        https://bugs.webkit.org/show_bug.cgi?id=93391

        Reviewed by Adam Barth.

        WebCompositor is logically part of the Platform API, along with WebLayerTreeView and the WebLayer types.

        * chromium/public/WebCompositor.h: Renamed from Source/WebKit/chromium/public/WebCompositorClient.h.
        (WebKit):
        (WebCompositor):
        (WebKit::WebCompositor::~WebCompositor):

2012-08-06  James Robinson  <jamesr@chromium.org>
